# systray2

./: Cargo.toml  README.md  appveyor.yml
examples/: systray-example.rs
src/: lib.rs
src/api/linux/: mod.rs
src/api/win32/: mod.rs
