[package]
name = "systray2"
version = "0.5.0"
authors = ["Actyx AG", "Kyle Machulis <kyle@machul.is>"]
description = "Rust library for making minimal cross-platform systray GUIs"
license = "BSD-3-Clause"
homepage = "http://github.com/actyx/systray2"
repository = "https://github.com/actyx/systray2.git"
readme = "README.md"
keywords = ["gui"]
edition = "2018"

[dependencies]
log = "0.4.14"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["shellapi", "libloaderapi", "errhandlingapi", "impl-default"] }
libc = "0.2.96"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.9.2"
glib = "0.10.3"
libappindicator = "0.5.2"

# [target.'cfg(target_os = "macos")'.dependencies]
# objc="*"
# cocoa="*"
# core-foundation="*"
