[package]
name = "systray2"
version = "0.5.0"
authors = ["Actyx AG", "Kyle Machulis <kyle@machul.is>"]
description = "Rust library for making minimal cross-platform systray GUIs"
license = "BSD-3-Clause"
homepage = "http://github.com/actyx/systray2"
repository = "https://github.com/actyx/systray2.git"
readme = "README.md"
keywords = ["gui", "systray"]
edition = "2021"

[dependencies]
log = "0.4.14"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.36.1", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
libc = "0.2.96"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.15.5"
glib = "0.15.12"
libappindicator = "0.7.1"

# [target.'cfg(target_os = "macos")'.dependencies]
# objc="*"
# cocoa="*"
# core-foundation="*"
